tests/zer_fail/bare_asm_rejected.zer
// EXPECTED: compile error
// Bare `asm(...)` is rejected (2026-04-23). Users must write `unsafe asm(...)`
// to explicitly mark the escape hatch (Rust-style pattern).
// Error message: "bare 'asm' is not allowed — use 'unsafe asm(...)'..."

naked void handler() {
    asm("nop");  // error: bare asm rejected
}

i32 main() { return 0; }
